# reflective.learning

./: pyproject.toml
.github/workflows/: main.yaml
src/reflective_learning/: __init__.py  context.py  dataset.py  encoder.py  inference.py  launch.py  metadata.py  model.py  postprocess.py  preprocess.py  train.py
src/reflective_learning/tools/: context.py  encoder.py  generate.py  main.py  metadata.py  mini.py  postprocess.py  preprocess.py  train.py
tests/: conftest.py  test_context_tool.py  test_core.py  test_dataset.py  test_encoder.py  test_inference.py  test_launch.py  test_model.py  test_postprocess.py  test_preprocess.py  test_torchrun.py  test_train.py
