[project]
name = "reflective-learning"
version = "0.1.0"
description = "Reflective Learning"
license = "Apache-2.0"
requires-python = ">=3.8"

dependencies = [
    "torch"
]

[project.optional-dependencies]
test = [
    "pytest",
    "torchvision",
    "transformers",
    "huggingface_hub",
    "requests",
    "tqdm",
    "gymnasium",
    "minigrid",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
