[project]
name = "reflective-learning"
version = "0.1.0"
description = "Reflective Learning"
license = "Apache-2.0"
requires-python = ">=3.8"

dependencies = [
    "torch"
]

[project.optional-dependencies]
test = [
    "pytest",
    "transformers",
    "tqdm",
    "minigrid",
    "lmdb",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "all",
]
enable = [
    "unused-import",
    "unused-wildcard-import",
]
